# advent_of_code

./: .gitignore  .pre-commit-config.yaml  README.md  day10_monitoring_station.py  day11_space_police.py  day3_crossed_wires.py  day4_secure_container.py  day6_orbit_map.py  day7_amp_circuit.py  day8_space_image_format.py  day9_sensor_boost.py  intcode.py  justfile  pyproject.toml  what_is_a_vdj_file.md
2019/: day10_monitoring_station.py  day11_space_police.py  day3_crossed_wires.py  day8_space_image_format.py  intcode.py
2021/01/: __main__.py  part1.exs
2021/02/: __main__.py  part1.vdj  part2.vdj  take2.py
2021/03/: __main__.py
2021/04/: __main__.py  part1.py  part2.py
2021/05/: __main__.py  part1.py  part2.py  test_day05.py
2021/06/: __main__.py  part1.exs  part2.exs
2021/07/: day07.exs  part1.exs
2021/08/: __main__.py
2021/09/: __main__.py
2021/10/: __main__.py
2021/11/: __main__.py
2021/12/: __main__.py
2021/13/: __main__.py
2021/14/: __main__.py
2021/15/: __main__.py
2021/16/: __main__.py
2021/17/: __main__.py
2021/18/: main.py  test_day18.py
2022/01/: __main__.py
2022/02/: __main__.py  day.html
2022/03/: __main__.py
2022/04/: __main__.py
2022/05/: __main__.py
2022/06/: __main__.py
2022/day07/: filesystem.py  main.py  test_day07.py
2022/day08/: main.py
2022/day09/: coordinates.py  main.py
2022/day10/: main.py
2022/day11/: main.py
2022/day12/: coordinates.py  main.py
2022/day13/: main.py
2022/day14/: main.py
2022/day15/: coordinates.py  main.py
skel/: main.py
tests/day10/: test_day10_samples.py
(+3 files in other folders)
