[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["AJ Kerrigan <aj@speckledmonkey.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ptipython = "^1.0.1"
more-itertools = "^8.12.0"
httpie = "^2.6.0"
visidata = {git = "https://github.com/saulpw/visidata.git", rev = "develop"}

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pylint = "^2.12.1"
flake8 = "^4.0.1"
pre-commit = "^2.16.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
